var pb = require('protobufjs');
var s2c = pb.protoFromFile('./s2c.proto');
var c2s = pb.protoFromFile('./c2s.proto');
var g2l = pb.protoFromFile('./g2l.proto');

var Result = s2c.build('S2C').Result;
var Update = s2c.build('S2C').Update;
var SystemMessage = s2c.build('S2C').SystemMessage;
var VersionInfoReply = s2c.build('S2C').VersionInfoReply;
var RegisterAccountReply = s2c.build('S2C').RegisterAccountReply;
var SelectCharacterReply = s2c.build('S2C').SelectCharacterReply;
var SelectAssistantReply = s2c.build('S2C').SelectAssistantReply;
var StartGameReply = s2c.build('S2C').StartGameReply;
var AccountInfo = s2c.build('S2C').AccountInfo;
var LogoutReply = s2c.build('S2C').LogoutReply;
var ChargeInfo = s2c.build('S2C').ChargeInfo;
var RankInfo = s2c.build('S2C').RankInfo;
var PostedHoney = s2c.build('S2C').PostedHoney;
var PostedBaton = s2c.build('S2C').PostedBaton;
var PostedBatonResult = s2c.build('S2C').PostedBatonResult;
var GameResult = s2c.build('S2C').GameResult;
var BuyItemReply = s2c.build('S2C').BuyItemReply;
var BuyOrUpgradeCharacterReply = s2c.build('S2C').BuyOrUpgradeCharacterReply;
var BuyOrUpgradeAssistantReply = s2c.build('S2C').BuyOrUpgradeAssistantReply;
var SendHoneyReply = s2c.build('S2C').SendHoneyReply;
var RequestBatonReply = s2c.build('S2C').RequestBatonReply;
var AcceptHoneyReply = s2c.build('S2C').AcceptHoneyReply;
var AcceptBatonReply = s2c.build('S2C').AcceptBatonReply;
var BatonResult = s2c.build('S2C').BatonResult;
var AcceptBatonResultReply = s2c.build('S2C').AcceptBatonResultReply;
var UpgradeReply = s2c.build('S2C').UpgradeReply;
var InviteFriendReply = s2c.build('S2C').InviteFriendReply;
var LoadRewardReply = s2c.build('S2C').LoadRewardReply;
var Pack = c2s.build('C2S').Pack;
var ID = c2s.build('C2S').ID;
var VersionInfo = c2s.build('C2S').VersionInfo;
var RegisterAccount = c2s.build('C2S').RegisterAccount;
var UnregisterAccount = c2s.build('C2S').UnregisterAccount;
var Login = c2s.build('C2S').Login;
var Logout = c2s.build('C2S').Logout;
var CheckInCharge = c2s.build('C2S').CheckInCharge;
var SelectCharacter = c2s.build('C2S').SelectCharacter;
var SelectAssistant = c2s.build('C2S').SelectAssistant;
var StartGame = c2s.build('C2S').StartGame;
var EndGame = c2s.build('C2S').EndGame;
var LoadRankInfo = c2s.build('C2S').LoadRankInfo;
var LoadPostedHoney = c2s.build('C2S').LoadPostedHoney;
var LoadPostedBaton = c2s.build('C2S').LoadPostedBaton;
var LoadPostedBatonResult = c2s.build('C2S').LoadPostedBatonResult;
var RequestPointReward = c2s.build('C2S').RequestPointReward;
var BuyItem = c2s.build('C2S').BuyItem;
var BuyOrUpgradeCharacter = c2s.build('C2S').BuyOrUpgradeCharacter;
var BuyOrUpgradeAssistant = c2s.build('C2S').BuyOrUpgradeAssistant;
var SendHoney = c2s.build('C2S').SendHoney;
var AcceptHoney = c2s.build('C2S').AcceptHoney;
var RequestBaton = c2s.build('C2S').RequestBaton;
var AcceptBaton = c2s.build('C2S').AcceptBaton;
var EndBaton = c2s.build('C2S').EndBaton;
var AcceptBatonResult = c2s.build('C2S').AcceptBatonResult;
var UpgradeHoneyScore = c2s.build('C2S').UpgradeHoneyScore;
var UpgradeHoneyTime = c2s.build('C2S').UpgradeHoneyTime;
var UpgradeCooldown = c2s.build('C2S').UpgradeCooldown;
var InviteFriend = c2s.build('C2S').InviteFriend;
var LoadReward = c2s.build('C2S').LoadReward;
var AccountLogin = g2l.build('G2L').AccountLogin;
var ConcurrentUser = g2l.build('G2L').ConcurrentUser;
var PeakConcurrentUser = g2l.build('G2L').PeakConcurrentUser;
var UniqueVisitor = g2l.build('G2L').UniqueVisitor;
var RetentionRate = g2l.build('G2L').RetentionRate;
var PayAssistant = g2l.build('G2L').PayAssistant;
var PayCharacter = g2l.build('G2L').PayCharacter;
var PayCoin = g2l.build('G2L').PayCoin;
var PayHeart = g2l.build('G2L').PayHeart;
var PayItem = g2l.build('G2L').PayItem;
var PayMoney = g2l.build('G2L').PayMoney;
var UserGamePlay = g2l.build('G2L').UserGamePlay;
var UserRegister = g2l.build('G2L').UserRegister;
var UserUnregister = g2l.build('G2L').UserUnregister;

exports.Result = Result;
exports.Update = Update;
exports.SystemMessage = SystemMessage;
exports.VersionInfoReply = VersionInfoReply;
exports.RegisterAccountReply = RegisterAccountReply;
exports.SelectCharacterReply = SelectCharacterReply;
exports.SelectAssistantReply = SelectAssistantReply;
exports.StartGameReply = StartGameReply;
exports.AccountInfo = AccountInfo;
exports.LogoutReply = LogoutReply;
exports.ChargeInfo = ChargeInfo;
exports.RankInfo = RankInfo;
exports.PostedHoney = PostedHoney;
exports.PostedBaton = PostedBaton;
exports.PostedBatonResult = PostedBatonResult;
exports.GameResult = GameResult;
exports.BuyItemReply = BuyItemReply;
exports.BuyOrUpgradeCharacterReply = BuyOrUpgradeCharacterReply;
exports.BuyOrUpgradeAssistantReply = BuyOrUpgradeAssistantReply;
exports.SendHoneyReply = SendHoneyReply;
exports.RequestBatonReply = RequestBatonReply;
exports.AcceptHoneyReply = AcceptHoneyReply;
exports.AcceptBatonReply = AcceptBatonReply;
exports.BatonResult = BatonResult;
exports.AcceptBatonResultReply = AcceptBatonResultReply;
exports.UpgradeReply = UpgradeReply;
exports.InviteFriendReply = InviteFriendReply;
exports.LoadRewardReply = LoadRewardReply;
exports.Pack = Pack;
exports.ID = ID;
exports.VersionInfo = VersionInfo;
exports.RegisterAccount = RegisterAccount;
exports.UnregisterAccount = UnregisterAccount;
exports.Login = Login;
exports.Logout = Logout;
exports.CheckInCharge = CheckInCharge;
exports.SelectCharacter = SelectCharacter;
exports.SelectAssistant = SelectAssistant;
exports.StartGame = StartGame;
exports.EndGame = EndGame;
exports.LoadRankInfo = LoadRankInfo;
exports.LoadPostedHoney = LoadPostedHoney;
exports.LoadPostedBaton = LoadPostedBaton;
exports.LoadPostedBatonResult = LoadPostedBatonResult;
exports.RequestPointReward = RequestPointReward;
exports.BuyItem = BuyItem;
exports.BuyOrUpgradeCharacter = BuyOrUpgradeCharacter;
exports.BuyOrUpgradeAssistant = BuyOrUpgradeAssistant;
exports.SendHoney = SendHoney;
exports.AcceptHoney = AcceptHoney;
exports.RequestBaton = RequestBaton;
exports.AcceptBaton = AcceptBaton;
exports.EndBaton = EndBaton;
exports.AcceptBatonResult = AcceptBatonResult;
exports.UpgradeHoneyScore = UpgradeHoneyScore;
exports.UpgradeHoneyTime = UpgradeHoneyTime;
exports.UpgradeCooldown = UpgradeCooldown;
exports.InviteFriend = InviteFriend;
exports.LoadReward = LoadReward;
exports.AccountLogin = AccountLogin;
exports.ConcurrentUser = ConcurrentUser;
exports.PeakConcurrentUser = PeakConcurrentUser;
exports.UniqueVisitor = UniqueVisitor;
exports.RetentionRate = RetentionRate;
exports.PayAssistant = PayAssistant;
exports.PayCharacter = PayCharacter;
exports.PayCoin = PayCoin;
exports.PayHeart = PayHeart;
exports.PayItem = PayItem;
exports.PayMoney = PayMoney;
exports.UserGamePlay = UserGamePlay;
exports.UserRegister = UserRegister;
exports.UserUnregister = UserUnregister;
