var pb = require('protobufjs');
var g2c = pb.protoFromFile('../protocol/g2c.proto');
var c2g = pb.protoFromFile('../protocol/c2g.proto');
var g2l = pb.protoFromFile('../protocol/g2l.proto');

var Result = g2c.build('G2C').Result;
var Update = g2c.build('G2C').Update;
var SystemMessage = g2c.build('G2C').SystemMessage;
var VersionInfoReply = g2c.build('G2C').VersionInfoReply;
var RegisterAccountReply = g2c.build('G2C').RegisterAccountReply;
var SelectCharacterReply = g2c.build('G2C').SelectCharacterReply;
var SelectAssistantReply = g2c.build('G2C').SelectAssistantReply;
var StartGameReply = g2c.build('G2C').StartGameReply;
var AccountInfo = g2c.build('G2C').AccountInfo;
var LogoutReply = g2c.build('G2C').LogoutReply;
var ChargeInfo = g2c.build('G2C').ChargeInfo;
var RankInfo = g2c.build('G2C').RankInfo;
var PostedHoney = g2c.build('G2C').PostedHoney;
var PostedBaton = g2c.build('G2C').PostedBaton;
var PostedBatonResult = g2c.build('G2C').PostedBatonResult;
var GameResult = g2c.build('G2C').GameResult;
var BuyItemReply = g2c.build('G2C').BuyItemReply;
var BuyOrUpgradeCharacterReply = g2c.build('G2C').BuyOrUpgradeCharacterReply;
var BuyOrUpgradeAssistantReply = g2c.build('G2C').BuyOrUpgradeAssistantReply;
var SendHoneyReply = g2c.build('G2C').SendHoneyReply;
var RequestBatonReply = g2c.build('G2C').RequestBatonReply;
var AcceptHoneyReply = g2c.build('G2C').AcceptHoneyReply;
var AcceptBatonReply = g2c.build('G2C').AcceptBatonReply;
var BatonResult = g2c.build('G2C').BatonResult;
var AcceptBatonResultReply = g2c.build('G2C').AcceptBatonResultReply;
var UpgradeReply = g2c.build('G2C').UpgradeReply;
var InviteFriendReply = g2c.build('G2C').InviteFriendReply;
var LoadRewardReply = g2c.build('G2C').LoadRewardReply;
var Pack = c2g.build('C2G').Pack;
var ID = c2g.build('C2G').ID;
var VersionInfo = c2g.build('C2G').VersionInfo;
var RegisterAccount = c2g.build('C2G').RegisterAccount;
var UnregisterAccount = c2g.build('C2G').UnregisterAccount;
var Login = c2g.build('C2G').Login;
var Logout = c2g.build('C2G').Logout;
var CheckInCharge = c2g.build('C2G').CheckInCharge;
var SelectCharacter = c2g.build('C2G').SelectCharacter;
var SelectAssistant = c2g.build('C2G').SelectAssistant;
var StartGame = c2g.build('C2G').StartGame;
var EndGame = c2g.build('C2G').EndGame;
var LoadRankInfo = c2g.build('C2G').LoadRankInfo;
var LoadPostedHoney = c2g.build('C2G').LoadPostedHoney;
var LoadPostedBaton = c2g.build('C2G').LoadPostedBaton;
var LoadPostedBatonResult = c2g.build('C2G').LoadPostedBatonResult;
var RequestPointReward = c2g.build('C2G').RequestPointReward;
var BuyItem = c2g.build('C2G').BuyItem;
var BuyOrUpgradeCharacter = c2g.build('C2G').BuyOrUpgradeCharacter;
var BuyOrUpgradeAssistant = c2g.build('C2G').BuyOrUpgradeAssistant;
var SendHoney = c2g.build('C2G').SendHoney;
var AcceptHoney = c2g.build('C2G').AcceptHoney;
var RequestBaton = c2g.build('C2G').RequestBaton;
var AcceptBaton = c2g.build('C2G').AcceptBaton;
var EndBaton = c2g.build('C2G').EndBaton;
var AcceptBatonResult = c2g.build('C2G').AcceptBatonResult;
var UpgradeHoneyScore = c2g.build('C2G').UpgradeHoneyScore;
var UpgradeHoneyTime = c2g.build('C2G').UpgradeHoneyTime;
var UpgradeCooldown = c2g.build('C2G').UpgradeCooldown;
var InviteFriend = c2g.build('C2G').InviteFriend;
var LoadReward = c2g.build('C2G').LoadReward;
var AccountLogin = g2l.build('G2L').AccountLogin;
var ConcurrentUser = g2l.build('G2L').ConcurrentUser;
var PeakConcurrentUser = g2l.build('G2L').PeakConcurrentUser;
var UniqueVisitor = g2l.build('G2L').UniqueVisitor;
var RetentionRate = g2l.build('G2L').RetentionRate;
var PayAssistant = g2l.build('G2L').PayAssistant;
var PayCharacter = g2l.build('G2L').PayCharacter;
var PayCoin = g2l.build('G2L').PayCoin;
var PayHeart = g2l.build('G2L').PayHeart;
var PayItem = g2l.build('G2L').PayItem;
var PayMoney = g2l.build('G2L').PayMoney;
var UserGamePlay = g2l.build('G2L').UserGamePlay;
var UserRegister = g2l.build('G2L').UserRegister;
var UserUnregister = g2l.build('G2L').UserUnregister;

exports.Result = Result;
exports.Update = Update;
exports.SystemMessage = SystemMessage;
exports.VersionInfoReply = VersionInfoReply;
exports.RegisterAccountReply = RegisterAccountReply;
exports.SelectCharacterReply = SelectCharacterReply;
exports.SelectAssistantReply = SelectAssistantReply;
exports.StartGameReply = StartGameReply;
exports.AccountInfo = AccountInfo;
exports.LogoutReply = LogoutReply;
exports.ChargeInfo = ChargeInfo;
exports.RankInfo = RankInfo;
exports.PostedHoney = PostedHoney;
exports.PostedBaton = PostedBaton;
exports.PostedBatonResult = PostedBatonResult;
exports.GameResult = GameResult;
exports.BuyItemReply = BuyItemReply;
exports.BuyOrUpgradeCharacterReply = BuyOrUpgradeCharacterReply;
exports.BuyOrUpgradeAssistantReply = BuyOrUpgradeAssistantReply;
exports.SendHoneyReply = SendHoneyReply;
exports.RequestBatonReply = RequestBatonReply;
exports.AcceptHoneyReply = AcceptHoneyReply;
exports.AcceptBatonReply = AcceptBatonReply;
exports.BatonResult = BatonResult;
exports.AcceptBatonResultReply = AcceptBatonResultReply;
exports.UpgradeReply = UpgradeReply;
exports.InviteFriendReply = InviteFriendReply;
exports.LoadRewardReply = LoadRewardReply;
exports.Pack = Pack;
exports.ID = ID;
exports.VersionInfo = VersionInfo;
exports.RegisterAccount = RegisterAccount;
exports.UnregisterAccount = UnregisterAccount;
exports.Login = Login;
exports.Logout = Logout;
exports.CheckInCharge = CheckInCharge;
exports.SelectCharacter = SelectCharacter;
exports.SelectAssistant = SelectAssistant;
exports.StartGame = StartGame;
exports.EndGame = EndGame;
exports.LoadRankInfo = LoadRankInfo;
exports.LoadPostedHoney = LoadPostedHoney;
exports.LoadPostedBaton = LoadPostedBaton;
exports.LoadPostedBatonResult = LoadPostedBatonResult;
exports.RequestPointReward = RequestPointReward;
exports.BuyItem = BuyItem;
exports.BuyOrUpgradeCharacter = BuyOrUpgradeCharacter;
exports.BuyOrUpgradeAssistant = BuyOrUpgradeAssistant;
exports.SendHoney = SendHoney;
exports.AcceptHoney = AcceptHoney;
exports.RequestBaton = RequestBaton;
exports.AcceptBaton = AcceptBaton;
exports.EndBaton = EndBaton;
exports.AcceptBatonResult = AcceptBatonResult;
exports.UpgradeHoneyScore = UpgradeHoneyScore;
exports.UpgradeHoneyTime = UpgradeHoneyTime;
exports.UpgradeCooldown = UpgradeCooldown;
exports.InviteFriend = InviteFriend;
exports.LoadReward = LoadReward;
exports.AccountLogin = AccountLogin;
exports.ConcurrentUser = ConcurrentUser;
exports.PeakConcurrentUser = PeakConcurrentUser;
exports.UniqueVisitor = UniqueVisitor;
exports.RetentionRate = RetentionRate;
exports.PayAssistant = PayAssistant;
exports.PayCharacter = PayCharacter;
exports.PayCoin = PayCoin;
exports.PayHeart = PayHeart;
exports.PayItem = PayItem;
exports.PayMoney = PayMoney;
exports.UserGamePlay = UserGamePlay;
exports.UserRegister = UserRegister;
exports.UserUnregister = UserUnregister;
